force-app/main/default/objects/custom_create308__c/custom_create308__c.object-meta.xml
<CustomObject>
    <label>Custom created object308</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects308</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>