force-app/main/default/objects/custom_create308__c/fields/custom_create_308field507__c.field-meta.xml
<CustomField>
    <fullName>custom_create_308field507__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 308field507</label>
    <type>Checkbox</type>
</CustomField>